fix small modal display on small screens issue

--- a/src/components/UI/Modal/Modal.module.css
+++ b/src/components/UI/Modal/Modal.module.css
@@ -37,7 +37,7 @@
         position: fixed;
         width: 80%;
         left: 10%;
-        top: 25%;
+        top: 15%;
         
     }
 }
